--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -15,8 +15,8 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="Login"
+        android:inputType="textEmailAddress"
+        android:text="Email"
         android:ems="10"
         android:layout_marginTop="70dp"
         android:id="@+id/editText"
