--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -10,7 +10,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="86dp"
-        android:id="@+id/button" />
+        android:id="@+id/loginButton" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -19,10 +19,9 @@
         android:text="Email"
         android:ems="10"
         android:layout_marginTop="70dp"
-        android:id="@+id/editText"
+        android:id="@+id/emailEditText"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:singleLine="true" />
+        android:layout_centerHorizontal="true"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -31,8 +30,8 @@
         android:text="Password"
         android:ems="10"
         android:layout_marginTop="27dp"
-        android:id="@+id/editText2"
-        android:layout_below="@+id/editText"
-        android:layout_alignLeft="@+id/editText"
-        android:layout_alignStart="@+id/editText" />
+        android:id="@+id/passwordEditText"
+        android:layout_below="@+id/emailEditText"
+        android:layout_alignLeft="@+id/emailEditText"
+        android:layout_alignStart="@+id/emailEditText" />
 </RelativeLayout>
