--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
-        android:text="Email"
+        android:hint="Email"
         android:ems="10"
         android:layout_marginTop="70dp"
         android:id="@+id/emailEditText"
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
-        android:text="Password"
+        android:hint="Password"
         android:ems="10"
         android:layout_marginTop="27dp"
         android:id="@+id/passwordEditText"
